# 202511-note_management_system

./: .gitattributes  .gitignore  README.md  _pystand_static.int  alembic.ini  api.py  compatible.py  components.py  dependencies.py  dev.py  filters.py  main.py  main.py.bak  models.py  notes.db.bak.1  pyproject.toml  schemas.py  services.py  settings.json  settings.lua  settings.py  test_notes.json  tests.py  utils.py  views.py  笔记管理系统v1.1.2.spec
.claude/: claude.md
app/: components.py  main.py  mediator.py  models.py  settings.lua  views.py
app/docs/: CODEGRAVE.md
app/locales/: zh-CN.lua
app/migrations/: env.py
app/migrations/versions/: b8926239da4b_tag_name_unique.py
app/pages/: __init__.py
app/pages/memo/: index.py
app/pages/note/: get_note.py
app/scripts/: is_valid_filename.py
app/templates/: drag_upload.js  key_pressed.js
app/tests/: test_aaa.py  test_bb.py  test_c.py  test_d.py  tests.py  use_go.py
app/tools/: package.py
app/utils/: __init__.py  cleanup.py  mediator.py  notification.py
docs/: CODEGRAVE.md  NOTES.md  TODOLISTS.md
migrations/: env.py
migrations/versions/: NOTES.md  edd5b8fd9b89_init.py
pages/: __init__.py  note.py  todolist.py
pages/note/: __init__.py  main.py
pages/todolist/: index.py
templates/: drag_upload.js  find_button_and_click.js  key_pressed.js  open_external_link.js
tests/: test.py  test_aa.py  test_e.py  test_g.py  test_memcached.py  test_teleport.py  tests.py
tools/: latex_image.py  note.json  package.py
unit/: api.py  app.py  app_issue.py.bak  components.py  filters.py  log.py  main.py  main_issue.py.bak  memo.unqlite  models.py  pyside_main.py.bak  services.py  settings.py  settings.toml  views.py
unit/docs/: UPDATELOGS.md
unit/migrations/versions/: 096e13d313fd_v1_1_2.py  2543bf771600_add_tag_table.py  2719f552a773_general.py  54a99c1aab6e_note.py  7ec84cc6a4ca_general.py  c4109a77a0ca_v1_1_1.py  d33ff4160e7f_general.py  e7b280c31a7d_add_foreignkey.py
unit/pages/memo/: index.py
unit/pages/note/: __init__.py  add_or_edit_note.py  get_note.py  index.py  main.py
unit/pages/todolist/: index.py
unit/scripts/: README.md
unit/scripts/tests/: test_is_valid_filename.py
unit/site/: mkdocs.yml
unit/site/docs/: Material-for-MkDocs-使用初体验.md  installation.md
unit/templates/: common.js  key_pressed.js  todolist_index.html
unit/tests/: test_b.py
unit/tools/: retry_git_push.py  sqlite_table_to_json.py
unit/utils/: __init__.py  ai.py  cleanup.py  timer.py  tkinter_ui.py
