[project]
name = "note-management-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "fastapi-limiter>=0.1.6",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "lupa>=2.6",
    "nicegui==2.24.0",
    "openai>=2.7.2",
    "pydantic-settings>=2.12.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "result>=0.17.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utc>=0.14.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.1",
    "ipython>=9.7.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyinstaller>=6.16.0",
]
